@@ -10,10 +10,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
 
 @Service
 public class CircunscripcionPartidoService {
@@ -38,7 +38,8 @@ public class CircunscripcionPartidoService {
 
     public List<CircunscripcionPartido> findByIdCircunscripcion(String codCircunscripcion) {
         List<CircunscripcionPartido> lista = circunscripcionPartidoRepository.findByKey_Circunscripcion(codCircunscripcion)
-                .stream().filter(x -> x.getEscanos_hasta() > 0).sorted(new CircunscripcionPartidoComparador().reversed()).toList();
+                .stream().filter(x -> x.getEscanos_hasta() > 0)
+                .sorted(new CircunscripcionPartidoComparador().reversed()).collect(Collectors.toList());
         return lista;
     }
 
